Corrected superscript positions.  Updated loading image.  Roma video jumps to correct screen.

--- a/assets/html5/style.css
+++ b/assets/html5/style.css
@@ -172,6 +172,10 @@ blockquote {
 	font-style: italic; 
 }
 
+blockquote sup {
+	font-style: normal;
+}
+
 dl {
 	margin: 1em 0;
 	padding: 0 1em;
